--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
-    "vuetify": "^0.17.3"
+    "@nuxtjs/font-awesome": "^1.0.3",
+    "nuxt": "^1.4.4",
+    "vuetify": "^1.3.9"
   },
   "devDependencies": {
-    "cross-env": "^5.0.1",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "babel-eslint": "^8.2.1",
+    "cross-env": "^5.0.1",
     "eslint": "^4.15.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
