--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/font-awesome": "^1.0.3",
     "nuxt": "^1.4.4",
+    "vue-in-viewport-directive": "^1.2.1",
     "vuetify": "^1.3.9"
   },
   "devDependencies": {
